--- a/crowdsource-frontend/src/main/scss/components/_footer.scss
+++ b/crowdsource-frontend/src/main/scss/components/_footer.scss
@@ -9,7 +9,6 @@
 // ---
 
 .footer {
-    margin-top: 2rem;
     padding: 3rem 1rem;
     color: $white;
     background-color: #3C3C3C;
